--- a/pages/project/project.wxml
+++ b/pages/project/project.wxml
@@ -36,9 +36,9 @@
 	<!-- 项目列表页 -->
 	<view class="page__bd" wx:if="{{projectListShow}}">
 
-		<view class="weui-cells__title">项目名称i</view>
+		<view class="weui-cells__title">项目名称</view>
 		<view class="weui-cells weui-cells_after-title">
-			<view bindtap="showProjectInfo" class="weui-cell weui-cell_example "  wx:for="{{projectList}}" wx:key="index" hover-class="weui-cell_active">
+			<view data-text="{{item.projectName}}" bindtap="showProjectInfo" class="weui-cell weui-cell_example " wx:for="{{projectList}}" wx:key="index" hover-class="weui-cell_active">
 				<view class="weui-cell__bd">{{item.projectName}}</view>
 				<view class="weui-cell__ft">{{item.explain}}</view>
 			</view>
@@ -48,8 +48,100 @@
 
 	<!-- 项目详情页 -->
 	<view class="page__bd" wx:if="{{projectInfoShow}}">
+		<view style="text-align: center">
+			<text bindtap="showProjectList">{{projectName}}</text>
+		</view>
 
+		<view id="projectImage">
+			<!-- <navigator url="/pages/tableData/tableData"> -->
+				<image bindtap="toTableData" src="/images/niaokantu.jpg" style="width: 100%"></image>
+			<!-- </navigator> -->
+		</view>
 
+		<view class="page">
 
+			<view class="page__bd page__bd_spacing">
+
+				<view class="weui-flex">
+					<view class="weui-flex__item">
+						<view class="placeholder">
+
+							<view class="table">
+								<view class="table-tr">
+									<view class="table-td">业主代表</view>
+									<view class="table-td">西城公司</view>
+								</view>
+
+								<view class="table-tr">
+									<view class="table-td">本月进度</view>
+									<view class="table-td">/</view>
+								</view>
+
+								<view class="table-tr">
+									<view class="table-td">占地面积</view>
+									<view class="table-td">18377㎡</view>
+								</view>
+
+								<view class="table-tr">
+									<view class="table-td">住在套数</view>
+									<view class="table-td">189</view>
+								</view>
+
+								<view class="table-tr">
+									<view class="table-td">年度计划投资</view>
+									<view class="table-td">3421.55</view>
+								</view>
+
+								<view class="table-tr">
+									<view class="table-td">年度累计审批</view>
+									<view class="table-td">2487.24</view>
+								</view>
+							</view>
+
+						</view>
+					</view>
+					<view class="weui-flex__item">
+						<view class="placeholder">
+
+							<view class="table">
+								<view class="table-tr">
+									<view class="table-td">年度目标</view>
+									<view class="table-td">/</view>
+								</view>
+
+								<view class="table-tr">
+									<view class="table-td">是否达标</view>
+									<view class="table-td">是</view>
+								</view>
+
+								<view class="table-tr">
+									<view class="table-td">建筑面积</view>
+									<view class="table-td">24865㎡</view>
+								</view>
+
+								<view class="table-tr">
+									<view class="table-td">店面间数</view>
+									<view class="table-td">44</view>
+								</view>
+
+								<view class="table-tr">
+									<view class="table-td">年度累计产值</view>
+									<view class="table-td">3109.05</view>
+								</view>
+
+								<view class="table-tr">
+									<view class="table-td">年度累计支付</view>
+									<view class="table-td">2487.24</view>
+								</view>
+							</view>
+						</view>
+
+					</view>
+				</view>
+
+			</view>
+
+		</view>
 	</view>
+
 </view>
