--- a/pages/control/dcdb/dcdb.wxml
+++ b/pages/control/dcdb/dcdb.wxml
@@ -1,30 +1,26 @@
+	<view class="weui-form-preview__ft">
+			<a class="weui-form-preview__btn weui-form-preview__btn_primary add" bindtap="add" >添加</a>
+	</view>
 <view class="page__bd chekc-record-list">
 		<view class="weui-form-preview" wx:for="{{records}}" wx:key="index" wx:for-item="item">
-			<view class="weui-form-preview__hd" bindtap="toDetails">
+			<view class="weui-form-preview__hd">
 				<view class="weui-form-preview__item">
-					<label class="weui-form-preview__label" >
 						<view class="application-name" wx:if="{{item.id}}">序号:{{item.id}}</view>
-					</label>
 				</view>
-        <view class="weui-form-preview__item">
-					<label class="weui-form-preview__label" >
+        <view class="weui-form-preview__item"  bindtap="toDetails" data-content="{{item.content}}">
 						<view class="application-name" wx:if="{{item.content}}">工作内容:{{item.content}}</view>
-					</label>
 				</view>
         <view class="weui-form-preview__item">
-					<label class="weui-form-preview__label" >
 						<view class="application-name" wx:if="{{item.finalTime}}">完成时限:{{item.finalTime}}</view>
-					</label>
 				</view>
         <view class="weui-form-preview__item">
-					<label class="weui-form-preview__label" >
 						<view class="application-name" wx:if="{{item.zb}}">主办:{{item.zb}}</view>
-					</label>
 				</view>
         <view class="weui-form-preview__item">
-					<label class="weui-form-preview__label" >
 						<view class="application-name" wx:if="{{item.xb}}">协办:{{item.xb}}</view>
-					</label>
+				</view>
+				<view class="weui-form-preview__ft">
+					<a class="weui-form-preview__btn weui-form-preview__btn_default del" bindtap="del" data-id="{{item.id}}" >删除</a>
 				</view>
 			</view>
     </view>
