--- a/pages/control/dcdb/details/details.wxml
+++ b/pages/control/dcdb/details/details.wxml
@@ -1,2 +1,13 @@
-<!--pages/control/dcdb/details/details.wxml-->
-<text>pages/control/dcdb/details/details.wxml</text>
+<view class="page" data-weui-theme="{{theme}}">
+	<view class="page__bd">
+			<view class="weui-panel__bd">
+        <view class="weui-media-box weui-media-box_text">
+            <view class="date">工作内容：{{db.content}}</view>
+        </view>
+			</view>
+    </view>
+  <view class="weui-form-preview__ft">
+			<a class="weui-form-preview__btn weui-form-preview__btn_primary add" bindtap="finish" >完成</a>
+	</view>
+</view>
+	
