--- a/pages/self/info/info.wxml
+++ b/pages/self/info/info.wxml
@@ -12,7 +12,7 @@
             <p>公司</p>
         </div>
         <div class="weui-cell__ft">
-          <picker bindchange="bindCompanyChange" value="{{index}}" range="{{company}}" range-key="name">
+          <picker bindchange="bindCompanyChange" value="{{index}}" range="{{companies}}" range-key="name">
               <input class="weui-input" placeholder="请选择公司" disabled="disabled" value="{{company.name}}" />
           </picker>
         </div>
