--- a/pages/control/dcdb/details/details.wxml
+++ b/pages/control/dcdb/details/details.wxml
@@ -6,8 +6,8 @@
         </view>
 			</view>
     </view>
-  <view class="weui-form-preview__ft">
+  <!-- <view class="weui-form-preview__ft">
 			<a class="weui-form-preview__btn weui-form-preview__btn_primary add" bindtap="finish" >完成</a>
-	</view>
+	</view> -->
 </view>
 	
