--- a/pages/tableData/datapages/tzwj/jgsgt/jgsgt.wxss
+++ b/pages/tableData/datapages/tzwj/jgsgt/jgsgt.wxss
@@ -1,1 +1,5 @@
-/* pages/tableData/datapages/tzwj/jgsgt/jgsgt.wxss */
+.imagesize{
+  display:flex;
+  justify-content: center;         
+  padding: 5px; 
+ }
