--- a/pages/tableData/datapages/tzwj/jgsgt/jgsgt.wxml
+++ b/pages/tableData/datapages/tzwj/jgsgt/jgsgt.wxml
@@ -1,3 +1,3 @@
-  <view wx:for="{{jgsgt}}" wx:key="item">
-    <image src= "{{RootPath}}{{item}}"/>
+  <view wx:for="{{jgsgt}}" wx:key="item" class = 'imagesize'>
+    <image src= "{{RootPath}}{{item}}" class="in-image"/>
   </view>
