--- a/pages/tableData/datapages/tzwj/jzsgt/jzsgt.wxml
+++ b/pages/tableData/datapages/tzwj/jzsgt/jzsgt.wxml
@@ -1,3 +1,3 @@
-  <view wx:for="{{jzsgt}}" wx:key="item">
+  <view wx:for="{{jzsgt}}" wx:key="item" class ='imagesize'>
     <image src= "{{RootPath}}{{item}}"/>
   </view>
