--- a/pages/tableData/datapages/tzwj/jzsgt/jzsgt.wxss
+++ b/pages/tableData/datapages/tzwj/jzsgt/jzsgt.wxss
@@ -1,1 +1,6 @@
 /* pages/tableData/datapages/tzwj/jzsgt/jzsgt.wxss */
+.imagesize{
+  display:flex;
+  justify-content: center;
+  padding: 5px;         
+ }
