--- a/pages/tableData/datapages/tptx/gylh/yqgc/yqgc.wxss
+++ b/pages/tableData/datapages/tptx/gylh/yqgc/yqgc.wxss
@@ -1,1 +1,16 @@
-/* pages/tableData/datapages/tptx/gylh/yqgc/yqgc.wxss */
+
+.application-name {
+  width: 100%;
+  height: 100%;
+}
+
+.application-name image {
+  width: 40rpx;
+  height: 40rpx;
+  /* vertical-align: middle; */
+}
+.imagesize{
+  display:flex;
+  justify-content: center;     
+  padding: 5px;     
+ }
