--- a/pages/tableData/datapages/tzwj/tsbb/tsbb.wxml
+++ b/pages/tableData/datapages/tzwj/tsbb/tsbb.wxml
@@ -1,3 +1,3 @@
   <view wx:for="{{tsbb}}" wx:key="item" class ='imagesize'>
-      <image src= "{{RootPath}}{{item}}"/>
+      <image src= "{{RootPath}}{{item}}" class="in-image"/>
   </view>
