--- a/pages/tableData/datapages/annualplan/annualplan.wxml
+++ b/pages/tableData/datapages/annualplan/annualplan.wxml
@@ -1,2 +1,2 @@
 <!--pages/tableData/datapages/annualplan.wxml-->
-<text>pages/tableData/datapages/annualplan.wxml</text>
+<web-view src="{{wvUrl}}"></web-view>
