--- a/pages/tableData/datapages/tptx/gylh/yqgc/yqgc.wxss
+++ b/pages/tableData/datapages/tptx/gylh/yqgc/yqgc.wxss
@@ -1,16 +1,14 @@
-
-.application-name {
-  width: 100%;
-  height: 100%;
-}
-
-.application-name image {
-  width: 40rpx;
-  height: 40rpx;
-  /* vertical-align: middle; */
-}
 .imagesize{
   display:flex;
-  justify-content: center;     
-  padding: 5px;     
+  justify-content: center;         
+  padding: 5px; 
  }
+ .in-image{
+  height: 300px;
+  width: 350px;
+}
+.line{
+  width:100%;
+  height:5rpx;
+  background:#0089dd;
+}
